--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -24,9 +30,8 @@
       </form>
     </header>
     <main>
-      <div class="container">
-        <ul class="gallery"></ul>
-      </div>
+      <div class="gallery"></div>
+      <div class="guard"></div>
     </main>
   </body>
 </html>
